--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8",
-    "styled-components": "^4.1.3"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
